# bachelor

./: .env  README.md
azure/: README.md
azure/parameters/: dev.parameters.json
clickfix_site/: index.js  package-lock.json  package.json  start_clickfix_flow.py  tcp_listener.py
clickfix_site/public/: clickfix.html
phishing-module/: config.py  send_email.py
phishing-module/data/: recipients.csv
phishing-module/templates/: clickfix_email.html  kea_password_update_da.html  microsoft_password_update.html
phishing_site/: .gitignore  kea_microsoft_login.html  microsoft_login.html  package.json
phishing_site/api/: .gitignore  index.js
phishing_site/backend/: collect_credentials.js
phishing_site/public/: kea_microsoft_login.html  microsoft_login.html
phishing_site/templates/: microsoft_password_update.html
purple-team-cli/: Product Requirements Document.md  README.md  prompt.txt  pyproject.toml  pyproject.toml (update)
purple-team-cli/.github/: copilot-instructions.md  promt.md
purple-team-cli/Tests/: conftest.py  test.py  test_playbook_commands.py  test_run_commands.py
purple-team-cli/src/purple_cli/: __init__.py  __main__.py  cli.py  interactive.py
purple-team-cli/src/purple_cli/commands/: __init__.py  config.py  list_cmd.py  playbook.py  run.py
purple-team-cli/src/purple_cli/core/: __init__.py  config.py  executor.py  playbook.py
purple-team-cli/src/purple_cli/wordlists/: common_passwords.txt  common_users.txt
purple-team-cli/src/purple_team_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+16 files in other folders)
