[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purple-team-cli"
version = "0.1.0"
description = "A CLI tool for orchestrating Atomic Red Team tests for purple team exercises"
readme = "README.md"
authors = [
    {name = "Purple Team", email = "example@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.7.0,<1.0.0",
    "pyyaml>=6.0,<7.0",
    "rich>=12.0.0,<13.0.0",
    "python-dotenv>=0.20.0,<2.0.0", # Added for phishing module
    "requests>=2.20.0,<3.0.0",      # Added for phishing module (if needed)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.0.0,<2.0.0",
]

[project.scripts]
purpletool = "purple_cli.__main__:main"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true